[package]
name = "bypass-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark and configuration harness for bypass-io"
rust-version = "1.95"

[dependencies]
bypass-db = { version = "0.1.0", path = "../bypass-db" }
bypass-io = { version = "0.1.0", path = "../bypass-io" }
