[package]
name = "bypass-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark and configuration harness for bypass-io"
rust-version = "1.95"

[dependencies]
bypass-db = { version = "0.1.0", path = "../bypass-db" }
bypass-io = { version = "0.1.0", path = "../bypass-io", features = ["spdk", "dpdk"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
