[package]
name = "bypass-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded columnar time-series store built on bypass-io"
rust-version = "1.95"

[dependencies]
bypass-io = { version = "0.1.0", path = "../bypass-io", default-features = false }
