[package]
name = "bypass-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel-bypass I/O primitives for Rust systems software"
rust-version = "1.95"

[features]
default = []
uring = ["dep:io-uring"]
spdk = []
dpdk = []
simd = []
numa = []

[dependencies]
io-uring = { version = "0.7", optional = true }
