[package]
name = "bypass-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel-bypass I/O primitives for Rust systems software"
rust-version = "1.95"

[features]
default = ["uring"]
uring = ["dep:io-uring", "dep:libc"]
spdk = []
dpdk = []
simd = []
numa = []

[dependencies]
crossbeam-queue = "0.3"
io-uring = { version = "0.7", optional = true }
libc = { version = "0.2", optional = true }
